--- a/style.css
+++ b/style.css
@@ -183,4 +183,17 @@ transition: all 0.5s;
 
 }
 
+@media ((max-width:300px)){
+    .banner{
+        height: 70vh;
+    }
+    .bannerTitle{
+        margin-top: 200px;
+ 
+    }
+    
+
+}
+
+
 
